Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16743

ZFS sanity test_316: lfs migrate -m1 failed: no such file or directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/473fe491-78ba-4552-a0ab-556025352754

      test_316 failed with the following error:

      lfs migrate -m1 failed
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master-patchless/768 - 4.18.0-240.22.1.el8_3.x86_64
      servers: https://build.whamcloud.com/job/lustre-master-patchless/768 - 4.18.0-240.22.1.el8_3.x86_64

      Started failing on 2023-04-13. Nothing in the logs except ESTALE error:

      ll_close_inode_openhandle()) lustre-clilmv-ffff991acdd0a800: inode [0x200005223:0x10470:0x0] mdc close failed: rc = -116
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_316 - lfs migrate -m1 failed

            laisiyao Lai Siyao
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: